--- a/labs/01-fs/wiki/concepts.wiki
+++ b/labs/01-fs/wiki/concepts.wiki
@@ -10,8 +10,8 @@ Un director este de fapt tot un fișier ce conține adresele altor fișiere. În
 Link-urile sunt legături între două puncte ale sistemului de fișiere. În general le folosim când vrem să ne ușurăm accesul la un fișier sau director, sau pentru a uniformiza accesul.
 
 Sistemul de fișiere folosit în Linux permite două tipuri de link-uri:
-- link-uri simbolice (soft links): se comportă precum un shortcut din Windows; pointează către un alt fișier/director
-- link-uri hard (hard links): nu au echivalent în Windows; simplu spus, sunt două fișiere ce împart aceleași date
+* link-uri simbolice (soft links): se comportă precum un shortcut din Windows; pointează către un alt fișier/director
+* link-uri hard (hard links): nu au echivalent în Windows; simplu spus, sunt două fișiere ce împart aceleași date
 
 Sistemul de fișiere este folosit pentru a organiza ierarhic toate datele stocate pe un sistem.
 
@@ -22,11 +22,11 @@ Un director poate conține mai multe fișiere și directoare, iar directoarele l
 
 În Linux, întreaga structură de directoare pornește din directorul root reprezentat de un singur slash "/".
 Directorul root conține numeroase alte directoare ce stochează diferite tipuri de informații:
-- /bin conține fișiere executabile, utilitare fundamentale cum ar fi cp, ls
-- /boot conține toate fișierele necesare pentru botarea cu succes a sistemului
-- /etc conține fișiere de configurare
-- /root este directorul home al utilizatorului privilegiat root
-- /home conține directoarele home pentru toți utilizatorii din sistem
+* /bin conține fișiere executabile, utilitare fundamentale cum ar fi cp, ls
+* /boot conține toate fișierele necesare pentru botarea cu succes a sistemului
+* /etc conține fișiere de configurare
+* /root este directorul home al utilizatorului privilegiat root
+* /home conține directoarele home pentru toți utilizatorii din sistem
 
 În directorul home al unui utilizator se gasesc fișiere personale, ce nu pot fi accesate de alți utilizatori.
 
@@ -46,8 +46,8 @@ Această operație se numește montare și se realizează folosind comanda mount
 ==== Căi absolute/relative ====
 
 Pentru accesare unui fișier sau director sunt posibile două moduri, în funcție de directorul curent:
-- căi absolute: pornesc din directorul root 
-- căi relative: pornesc din directorul curent
+* căi absolute: pornesc din directorul root
+* căi relative: pornesc din directorul curent
 
 Directorul curent este directorul in care utilizatorul se află la momentul actual. Acesta poate fi aflat folosint comanda pwd.
 Pentru schimbarea directorului curent se folosește comanda cd.
@@ -98,8 +98,8 @@ Căile absolute se pot folosi indiferent de directorul curent în care se află 
 ===== Utilizatori și pemisiuni =====
 
 În Linux există două tipuri de utlizatori:
-- neprivilegiați - nu pot modifica starea sistemului, nu pot realiza modificări ce afectează alți utilizatori
-- privilegiați - au acces total asupra sistemului, de exemplu utilizatorul root
+* neprivilegiați - nu pot modifica starea sistemului, nu pot realiza modificări ce afectează alți utilizatori
+* privilegiați - au acces total asupra sistemului, de exemplu utilizatorul root
 
 Utilizatorul root este prezent, în general, pe orice sistem Linux, rolul său fiind de administrare și gestionare a celorlalți utilizatori.
 
@@ -111,14 +111,14 @@ Diferența dintre utilizatorii neprivilegiați și utilizatorii privilegiați es
 Linux folosește permisiuni pentru a dicta ce operații poate să efectueze un utilizator asupra unui fișier sau director.
 
 Permisiunile pot fi aplicate pe trei categorii:
-- utilizator (owner): utilizatorul care este deținătorul fișierului/directorului
-- grup (group): un grup de utilizatori care sunt deținătorii fișierului/directorului
-- ceilalți (others): utilizatorii care nu intră în niciuna dintre categoriile dinainte
+* utilizator (owner): utilizatorul care este deținătorul fișierului/directorului
+* grup (group): un grup de utilizatori care sunt deținătorii fișierului/directorului
+* ceilalți (others): utilizatorii care nu intră în niciuna dintre categoriile dinainte
 
 Pentru fiecare dintre cele trei categorii există trei permisiuni:
-- de citire: utilizatorul poate citi conținutul fișierului respectiv poate lista conținutul directorului
-- de scriere: utilizatorul poate modifica conținutul fișierului/directorului
-- de execuție: utilizatorul poate lansa fișierul în execuție respectiv poate parcurge directorul
+* de citire: utilizatorul poate citi conținutul fișierului respectiv poate lista conținutul directorului
+* de scriere: utilizatorul poate modifica conținutul fișierului/directorului
+* de execuție: utilizatorul poate lansa fișierul în execuție respectiv poate parcurge directorul
 
 Ordinea în care se aplică aceste permisiuni este: dacă utilizatorul este deținătorul fișierului, atunci se aplică permisiunile pentru owner; dacă face parte din grupul deținător, atunci se aplică permisiunile pentru group; dacă niciuna dintre condițiile precedente nu este adevărată, atunci se aplică permisiunile pentru others.
 
